# docs/swagger.json
@@ -7,10 +7,13 @@
         "description": "一款面向小型团队的任务进度共享软件",
         "title": "Team",
         "termsOfService": "http://swagger.io/terrms",
-        "contact": {},
+        "contact": {
+            "name": "Eternal-Faith",
+            "email": "2295616516@qq.com"
+        },
         "version": "1.0.0"
     },
-    "host": "localhost:9918",
+    "host": "122.112.236.36:9918",
     "paths": {
         "/info/donelist": {
             "get": {
@@ -162,7 +165,11 @@
         },
         "/login": {
             "post": {
+                "description": "\"一站式登录\"",
                 "consumes": [
+                    "application/json"
+                ],
+                "produces": [
                     "application/json"
                 ],
                 "tags": [
@@ -171,14 +178,7 @@
                 "summary": "\"登录\"",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "user",
+                        "description": "输入学号，密码进行登录",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -189,16 +189,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "登陆成功"
+                        "description": "将用户id作为token保留"
                     },
                     "400": {
-                        "description": "输入格式错误"
+                        "description": "输入有误"
                     },
                     "401": {
-                        "description": "密码错误"
-                    },
-                    "404": {
-                        "description": "用户不存在"
+                        "description": "身份认证失败 重新登录"
                     }
                 }
             }
@@ -750,43 +747,6 @@
                 }
             }
         },
-        "/user": {
-            "post": {
-                "description": "\"注册一个新用户\"",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "\"注册\"",
-                "parameters": [
-                    {
-                        "description": "user",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.User"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "用户创建成功"
-                    },
-                    "400": {
-                        "description": "输入有误，格式错误"
-                    },
-                    "401": {
-                        "description": "电话号码重复"
-                    }
-                }
-            }
-        },
         "/user/avatar": {
             "put": {
                 "description": "\"修改用户头像\"",
@@ -825,94 +785,6 @@
                     },
                     "401": {
                         "description": "身份验证失败"
-                    }
-                }
-            }
-        },
-        "/user/change_password/change": {
-            "post": {
-                "description": "“修改密码”",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "userinfo"
-                ],
-                "summary": "“修改用户密码”",
-                "parameters": [
-                    {
-                        "description": "输入两次新密码",
-                        "name": "password",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Password"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "修改成功"
-                    },
-                    "400": {
-                        "description": "修改失败"
-                    },
-                    "401": {
-                        "description": "验证失败"
-                    }
-                }
-            }
-        },
-        "/user/change_password/verify": {
-            "get": {
-                "description": "“修改密码前对密码的验证功能”",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "userinfo"
-                ],
-                "summary": "“验证用户密码”",
-                "parameters": [
-                    {
-                        "description": "输入密码",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.User"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "验证成功"
-                    },
-                    "400": {
-                        "description": "输入有误"
-                    },
-                    "401": {
-                        "description": "验证失败"
                     }
                 }
             }
@@ -1102,20 +974,6 @@
         }
     },
     "definitions": {
-        "model.Password": {
-            "type": "object",
-            "properties": {
-                "confirm_password": {
-                    "type": "string"
-                },
-                "new_password": {
-                    "type": "string"
-                },
-                "old_password": {
-                    "type": "string"
-                }
-            }
-        },
         "model.Project": {
             "type": "object",
             "properties": {
@@ -1241,6 +1099,9 @@
                     "type": "string"
                 },
                 "sha": {
+                    "type": "string"
+                },
+                "student_id": {
                     "type": "string"
                 }
             }
