# handler/userinfo.go
@@ -1,7 +1,6 @@
 package handler
 
 import (
-	"fmt"
 	"team/model"
 
 	"github.com/gin-gonic/gin"
@@ -19,14 +18,8 @@ import (
 // Router /user/info [get]
 func Userinfo(c *gin.Context) {
 	//注意这里token要手写到header里（客户端）
-	temp, ok := c.Get("id")
-	id := temp.(int)
-	if !ok {
-		c.JSON(401, gin.H{
-			"code":    401,
-			"message": "身份验证失败",
-		})
-	}
+	id := c.MustGet("id").(int)
+
 	Userinformation, err := model.GetUserInfo(id)
 	if err != nil {
 		c.JSON(400, gin.H{
@@ -55,14 +48,7 @@ func Userinfo(c *gin.Context) {
 // @Router /user/info [put]
 func ChangeNickname(c *gin.Context) {
 	var user model.User
-	temp, ok := c.Get("id")
-	id := temp.(int)
-	if !ok {
-		c.JSON(401, gin.H{
-			"code":    401,
-			"message": "身份验证失败",
-		})
-	}
+	id := c.MustGet("id").(int)
 	if err1 := c.BindJSON(&user); err1 != nil {
 		c.JSON(400, gin.H{
 			"code":    400,
@@ -102,105 +88,6 @@ func ChangeNickname(c *gin.Context) {
 	})
 }
 
-// @Summary “验证用户密码”
-// @Description “修改密码前对密码的验证功能”
-// @Tags userinfo
-// @Accept json
-// @Produce json
-// @Param user body model.User true "输入密码"
-// @Param token header string true "token"
-// @Success 200 "验证成功"
-// @Failure 401 "验证失败"
-// @Failure 400 "输入有误"
-// @Router /user/change_password/verify [get]
-func VerifyPassword(c *gin.Context) {
-	var user model.User
-	temp, ok := c.Get("id")
-	id := temp.(int)
-	if !ok {
-		c.JSON(401, gin.H{
-			"code":    401,
-			"message": "身份验证失败",
-		})
-	}
-	Userinformation, err := model.GetUserInfo(id)
-	if err != nil {
-		c.JSON(400, gin.H{
-			"code":    400,
-			"message": "获取失败",
-		})
-	}
-	if err1 := c.BindJSON(&user); err1 != nil {
-		fmt.Println(err1)
-		c.JSON(400, gin.H{
-			"code":    400,
-			"message": "输入格式有误",
-		})
-		return
-	}
-	if user.Password != Userinformation.Password {
-		c.JSON(401, gin.H{
-			"code":    401,
-			"message": "验证失败",
-		})
-		return
-	}
-	c.JSON(200, gin.H{
-		"code":    200,
-		"message": "验证成功",
-	})
-}
-
-// @Summary “修改用户密码”
-// @Description “修改密码”
-// @Tags userinfo
-// @Accept json
-// @Produce json
-// @Param password body model.Password true "输入两次新密码"
-// @Param token header string true "token"
-// @Success 200 "修改成功"
-// @Failure 401 "验证失败"
-// @Failure 400 "修改失败"
-// @Router /user/change_password/change [post]
-func ChangePassword(c *gin.Context) {
-	// var user model.User
-	temp, ok := c.Get("id")
-	id := temp.(int)
-	if !ok {
-		c.JSON(401, gin.H{
-			"code":    401,
-			"message": "身份验证失败",
-		})
-	}
-	var password model.Password
-	if err1 := c.BindJSON(&password); err1 != nil {
-		c.JSON(401, gin.H{
-			"code":    401,
-			"message": "输入格式有误",
-		})
-		return
-	}
-	if password.ConfirmPassword != password.NewPassword {
-		c.JSON(401, gin.H{
-			"code":    401,
-			"message": "两次输入不一致",
-		})
-		return
-	} else {
-		err := model.ModifyPassword(id, password.ConfirmPassword)
-		if err != nil {
-			c.JSON(400, gin.H{
-				"code":    400,
-				"message": "修改失败",
-			})
-		}
-	}
-	c.JSON(200, gin.H{
-		"code":    200,
-		"message": "修改成功",
-	})
-}
-
 // @Summary “用户反馈”
 // @Description “用户反馈”
 // @Tags userinfo
@@ -214,14 +101,7 @@ func ChangePassword(c *gin.Context) {
 // @Router /user/feedback [put]
 func Feedback(c *gin.Context) {
 	// ID := c.MustGet("student_id").(string)
-	temp, ok := c.Get("id")
-	id := temp.(int)
-	if !ok {
-		c.JSON(401, gin.H{
-			"code":    401,
-			"message": "身份验证失败",
-		})
-	}
+	id := c.MustGet("id").(int)
 	var user model.User
 	user.UserId = id
 	if err := c.BindJSON(&user); err != nil {
@@ -239,3 +119,99 @@ func Feedback(c *gin.Context) {
 		})
 	}
 }
+
+// // @Summary “验证用户密码”
+// // @Description “修改密码前对密码的验证功能”
+// // @Tags userinfo
+// // @Accept json
+// // @Produce json
+// // @Param user body model.User true "输入密码"
+// // @Param token header string true "token"
+// // @Success 200 "验证成功"
+// // @Failure 401 "验证失败"
+// // @Failure 400 "输入有误"
+// // @Router /user/change_password/verify [get]
+// func VerifyPassword(c *gin.Context) {
+// 	var user model.User
+// 	temp, ok := c.Get("id")
+// 	id := temp.(int)
+// 	if !ok {
+// 		c.JSON(401, gin.H{
+// 			"code":    401,
+// 			"message": "身份验证失败",
+// 		})
+// 	}
+// 	Userinformation, err := model.GetUserInfo(id)
+// 	if err != nil {
+// 		c.JSON(400, gin.H{
+// 			"code":    400,
+// 			"message": "获取失败",
+// 		})
+// 	}
+// 	if err1 := c.BindJSON(&user); err1 != nil {
+// 		fmt.Println(err1)
+// 		c.JSON(400, gin.H{
+// 			"code":    400,
+// 			"message": "输入格式有误",
+// 		})
+// 		return
+// 	}
+// 	if user.Password != Userinformation.Password {
+// 		c.JSON(401, gin.H{
+// 			"code":    401,
+// 			"message": "验证失败",
+// 		})
+// 		return
+// 	}
+// 	c.JSON(200, gin.H{
+// 		"code":    200,
+// 		"message": "验证成功",
+// 	})
+// }
+
+// // @Summary “修改用户密码”
+// // @Description “修改密码”
+// // @Tags userinfo
+// // @Accept json
+// // @Produce json
+// // @Param password body model.Password true "输入两次新密码"
+// // @Param token header string true "token"
+// // @Success 200 "修改成功"
+// // @Failure 401 "验证失败"
+// // @Failure 400 "修改失败"
+// // @Router /user/password [post]
+// func ChangePassword(c *gin.Context) {
+// 	// var user model.User
+// 	temp, ok := c.Get("id")
+// 	id := temp.(int)
+// 	if !ok {
+// 		c.JSON(401, gin.H{
+// 			"code":    401,
+// 			"message": "身份验证失败",
+// 		})
+// 	}
+// 	var password model.Password
+// 	if err1 := c.BindJSON(&password); err1 != nil {
+// 		c.JSON(401, gin.H{
+// 			"code":    401,
+// 			"message": "输入格式有误",
+// 		})
+// 		return
+// 	}
+// 	if password.ConfirmPassword != password.NewPassword {
+// 		c.JSON(401, gin.H{
+// 			"code":    401,
+// 			"message": "两次输入不一致",
+// 		})
+// 		err := model.ModifyPassword(id, password.ConfirmPassword)
+// 		if err != nil {
+// 			c.JSON(400, gin.H{
+// 				"code":    400,
+// 				"message": "修改失败",
+// 			})
+// 	}
+// 	c.JSON(200, gin.H{
+// 		"code":    200,
+// 		"message": "修改成功",
+// 	})
+// }
