# model/model.go
@@ -4,15 +4,17 @@ package model
 //gorm:"column:id",是为为对应的sql语句中的字段起名字。gorm自动生成sql时大写字母转小写还会生成下划线
 //id应该都设为int不然输不进去数据
 //前端传数据时一定要传有json的tag的数据
+
 type User struct {
-	UserId   int    `json:"id" gorm:"column:id"`
-	Phone    string `json:"phone"`
-	NickName string `json:"nickname" gorm:"column:nickname"`
-	Password string `json:"password"`
-	Feedback string `json:"feedback"`
-	Avatar   string `json:"avatar"`
-	Sha      string `json:"sha"`
-	Path     string `json:"path"`
+	UserId    int    `json:"id" gorm:"column:id"`
+	StudentId string `json:"student_id" `
+	Phone     string `json:"phone"`
+	NickName  string `json:"nickname" gorm:"column:nickname"`
+	Password  string `json:"password"`
+	Feedback  string `json:"feedback"`
+	Avatar    string `json:"avatar"`
+	Sha       string `json:"sha"`
+	Path      string `json:"path"`
 }
 
 type Team struct {
